| Bug #19452 | mysql_upgrade: reads [client] group, but doesn't understand host option | ||
|---|---|---|---|
| Submitted: | 1 May 2006 1:49 | Modified: | 2 Sep 2006 3:55 |
| Reporter: | Paul DuBois | ||
| Status: | Closed | ||
| Category: | Server: Installing | Severity: | S3 (Non-critical) |
| Version: | 5.0, 5.1 | OS: | |
| Assigned to: | Alexey Botchkov | Target Version: | |
[1 May 2006 1:49]
Paul DuBois
[2 May 2006 15:27]
Miguel Solorzano
Thank you for the bug report.
[3 Jul 2006 11:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8634
[26 Jul 2006 23:20]
Jim Winstead
Patch looks good to me.
[26 Jul 2006 23:29]
Magnus Blaudd
Patch looks ok to me
[16 Aug 2006 22:48]
Reggie Burnett
Fixed in 5.0.25
[2 Sep 2006 3:55]
Paul DuBois
Noted in 5.0.25 changelog. mysql_upgrade no longer reads the [client] option file group because it is not a client and did not understand client options such as host. Now it reads only the [mysql_upgrade] group.
