bug #19452 (mysql_upgrade reads [client] section but doesn't handle [host] option